adding memo field and considerations
